--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ DateTime==5.1
 dj-database-url==2.0.0
 Django==4.2.1
 django-filter==23.2
-django-heroku==0.3.1
 django-picklefield==3.1
 django-q==1.3.9
 exceptiongroup==1.1.1
@@ -23,7 +22,7 @@ h11==0.14.0
 idna==3.4
 jinxed==1.2.0
 outcome==1.2.0
-psycopg2==2.9.6
+psycopg2-binary==2.9.6
 pycparser==2.21
 PySocks==1.7.1
 python-dateutil==2.8.2
