--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
 .env
 venv
 new_venv
+old.env
+data
+
+*.pyc
+__pycache
+.DS_Store
+.env.dev
 .env.prod
 .env.prod.db
-old .env
-data
+
+.env.staging
+.env.staging.db
+.env.prod.proxy-companion
+.env.staging.proxy-companion
