--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -11,7 +11,7 @@ services:
     expose:
       - 8000
     env_file:
-      - ./.env.prod
+      - ./.env.staging
     depends_on:
       - db
   db:
@@ -19,7 +19,7 @@ services:
     volumes:
       - ./data/postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.prod.db
+      - ./.env.staging.db
   nginx-proxy:
     container_name: nginx-proxy
     build: nginx
@@ -38,7 +38,7 @@ services:
   acme-companion:
     image: nginxproxy/acme-companion
     env_file:
-      - ./.env.prod.proxy-companion
+      - ./.env.staging.proxy-companion
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - certs:/etc/nginx/certs
